# rtsp-player

./: Cargo.toml
crates/player/: Cargo.toml
crates/player-sys/: Cargo.toml
crates/player/src/: lib.rs
crates/player_net/: Cargo.toml
crates/player_net/src/: lib.rs
dotnet/: player.cs
src/: main.rs
