[package]
name = "rtsp-player"
version = "0.1.0"
edition = "2024"
description = "Stream videos to a window."

[dependencies]
gstreamer = "0.23.5"
gstreamer-video = "0.23.5"
glib = "0.20.9"
ctrlc = "3.2.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = "1.0.218"
serde_json = "1.0.140"

