[package]
name = "player-sys"
version = "0.1.0"
edition = "2024"

[lib]
name = "player_sys"
crate-type = ["cdylib"]

[dependencies]
gstreamer = "0.23.5"
gstreamer-video = "0.23.5"
glib = "0.20.9"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange", 
]}
