[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.23.5"
gstreamer-video = "0.23.5"
glib = "0.20.9"
ctrlc = "3.2.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = "1.0.218"
serde_json = "1.0.140"
windows = { version = "0.60", features = [
    "Win32_Foundation", 
    "Win32_System_DataExchange", 
    "Win32_Graphics_Gdi", 
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
tokio = { version = "1.44.0", features = ["full"]}
